--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -51,7 +51,7 @@
 
       <div class="bground">
         <div class="content">
-          <span class="close"></span>
+          <span class="close" id="closeModal"></span>
           <div class="modal-body">
             <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
               <div class="formData">
