--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -4,29 +4,38 @@
     <meta charset="utf-8" />
     <title>Reservation</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+    <!-- Import CSS & Fonts -->
     <link rel="stylesheet" href="./assets/css/modal.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans" rel="stylesheet" />
   </head>
 
   <body>
+    <!-- Navbar -->
     <div class="topnav" id="myTopnav">
       <div class="header-logo">
         <img alt="logo" src="./assets/images/Logo.png" width="auto" height="auto" />
       </div>
+
+      <!-- Right menu -->
       <div class="main-navbar">
         <a href="#" class="active"><span>Accueil</span></a>
         <a href="#"><span>Détails de l'évènement</span></a>
         <a href="#"><span>À propos</span></a>
         <a href="#"><span>Contact</span></a>
         <a href="#"><span>Évènements passés</span></a>
+
+        <!-- Hamburger button for responsive -->
         <a href="javascript:void(0);" class="icon" onclick="editNav()">
           <i class="fa fa-bars"></i>
         </a>
       </div>
     </div>
+    <!-- End Navbar -->
     
     <main>
+      <!-- Hero section -->
       <div class="hero-section">
         <div class="hero-content">
           <h1 class="hero-headline">
@@ -48,32 +57,49 @@
           je m'inscris
         </button>
       </div>
+      <!-- End Hero section -->
 
+      <!-- Form Modal -->
       <div class="bground">
         <div class="content">
+          <!-- Button close -->
           <span class="close" id="closeModal"></span>
+
+          <!-- Form -->
           <div class="modal-body">
             <form name="reserve" action="index.html" method="get" onsubmit="return validate();">
+
+              <!-- Firstname input -->
               <div class="formData">
-                <label>Prénom</label><br>
+                <label for="first">Prénom</label><br>
                 <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
               </div>
+
+              <!-- Lastname input -->
               <div class="formData">
-                <label>Nom</label><br>
+                <label for="last">Nom</label><br>
                 <input class="text-control" type="text" id="last" name="last" /><br>
               </div>
+
+              <!-- Email input -->
               <div class="formData">
-                <label>E-mail</label><br>
+                <label for="email">E-mail</label><br>
                 <input class="text-control" type="email" id="email" name="email" /><br>
               </div>
+
+              <!-- Birthdate input -->
               <div class="formData">
-                <label>Date de naissance</label><br>
+                <label for="birthdate">Date de naissance</label><br>
                 <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
               </div>
+
+              <!-- Number input -->
               <div class="formData">
-                <label>À combien de tournois GameOn avez-vous déjà participé ?</label><br>
+                <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
                 <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99">
               </div>
+
+              <!-- Select input -->
               <p class="text-label">A quel tournoi souhaitez-vous participer cette année ?</p>
               <div class="formData">
                 <input class="checkbox-input" type="radio" id="location1" name="location" value="New York" />
@@ -102,6 +128,7 @@
                   Portland</label>
               </div>
 
+              <!-- Checkbox input -->
               <div class="formData">
                 <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
                 <label class="checkbox2-label" for="checkbox1" required>
@@ -116,11 +143,14 @@
                 </label>
                 <br>
               </div>
+
+              <!-- Submit Button -->
               <input class="btn-submit" type="submit" class="button" value="C'est parti" />
             </form>
           </div>
         </div>
       </div>
+      <!-- End Form Modal -->
     </main>
 
     <footer>
