--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -72,31 +72,31 @@
               <!-- Firstname input -->
               <div class="formData">
                 <label for="first">Prénom</label><br>
-                <input class="text-control" type="text" id="first" name="first" minlength="2" required /><br>
+                <input class="text-control" type="text" id="first" name="first" minlength="2" /><br>
               </div>
 
               <!-- Lastname input -->
               <div class="formData">
                 <label for="last">Nom</label><br>
-                <input class="text-control" type="text" id="last" name="last" required /><br>
+                <input class="text-control" type="text" id="last" name="last" /><br>
               </div>
 
               <!-- Email input -->
               <div class="formData">
                 <label for="email">E-mail</label><br>
-                <input class="text-control" type="email" id="email" name="email" required /><br>
+                <input class="text-control" type="email" id="email" name="email" /><br>
               </div>
 
               <!-- Birthdate input -->
               <div class="formData">
                 <label for="birthdate">Date de naissance</label><br>
-                <input class="text-control" type="date" id="birthdate" name="birthdate" required /><br>
+                <input class="text-control" type="date" id="birthdate" name="birthdate" /><br>
               </div>
 
               <!-- Number input -->
-              <div class="formData">
+              <div class="formData pt-3">
                 <label for="quantity">À combien de tournois GameOn avez-vous déjà participé ?</label><br>
-                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" required >
+                <input type="number" class="text-control" id="quantity" name="quantity" min="0" max="99" >
               </div>
 
               <!-- Select input -->
@@ -130,8 +130,8 @@
 
               <!-- Checkbox input -->
               <div class="formData">
-                <input class="checkbox-input" type="checkbox" id="checkbox1" checked />
-                <label class="checkbox2-label" for="checkbox1" required>
+                <input class="checkbox-input" type="checkbox" id="checkbox1" />
+                <label class="checkbox2-label" for="checkbox1">
                   <span class="checkbox-icon"></span>
                   J'ai lu et accepté les conditions d'utilisation.
                 </label>
@@ -155,6 +155,7 @@
                 <p>Merci !</p>
                 <p >Votre réservation a été reçue.</p>
               </div>
+              <button class="btn-submit" onclick="closeModal()">Fermer</button>
             </div>
             <!-- End success message section -->
           </div>
@@ -173,6 +174,7 @@
     <!-- End Footer -->
     
     <!-- Scripts -->
+    <script src="./assets/js/input.js"></script>
     <script src="./assets/js/form.js"></script>
     <script src="./assets/js/modal.js"></script>
   </body>
