styles: fix height success container

--- a/starterOnly/index.html
+++ b/starterOnly/index.html
@@ -151,8 +151,7 @@
             <!-- Success message section -->
             <div class="success-message hidden" id="successMessage">
               <div class="success-message__text">
-                <p>Merci !</p>
-                <p >Votre réservation a été reçue.</p>
+                <p>Merci !<br>Votre réservation a été reçue.</p>
               </div>
               <button class="btn-submit" onclick="closeModal()">Fermer</button>
             </div>
